--- a/index.html
+++ b/index.html
@@ -13,5 +13,19 @@
       <h2>You are a code wizard, Harry!</h2>
       <h4>Take this quiz to be sorted into your Epicodus House.</h4>
     </div>
+    <div class="container"><!--start container-->
+      <div class="panel panel-primary"><!-- Start Quiz Panel-->
+        <div class="panel-heading">
+          <h3 class="panel-title">Official Sorting Quiz</h3>
+        </div>
+        <div class="panel-body">
+          This is where the quiz goes
+        </div>
+        <div class="panel-footer panel-primary">
+          Panel footer
+        </div>
+      </div><!-- End Quiz Panel-->
+
+    </div><!--end container-->
   </body>
 </html>
