--- a/index.html
+++ b/index.html
@@ -18,8 +18,34 @@
         <div class="panel-heading">
           <h3 class="panel-title">Official Sorting Quiz</h3>
         </div>
-        <div class="panel-body">
-          This is where the quiz goes
+        <div class="panel-body"><!--start Form-->
+          <form id="From">
+            <div class="form-group">
+              <label for="name">First Name:</label>
+              <input type="text" name="name" class="firstName form-control">
+            </div>
+            <div class="form-group">
+              <label for="name">Last Name:</label>
+              <input type="text" name="name" class="lastName form-control">
+            </div>
+            <label for="name">What type of Company appeals to you most?</label>
+            <select class="form-control" id="companyType">
+              <option value="coffee">Larger, more established businesses</option>  <!--C#-->
+              <option value="water">Smaller companies or startups</option>
+              <option value="tea">Either large or small companies</option>
+              <option value="kombucha">A creative company that would value my design talent</option>
+            </select>
+
+
+
+
+
+
+
+          </form><!--End Form-->
+
+
+
         </div>
         <div class="panel-footer panel-primary">
           Panel footer
