add 5th question, select box type and corrected some small errors in previous questions

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
               <option value="larger">Larger, more established businesses</option>  <!--C#-->
               <option value="smaller">Smaller companies or startups</option>
               <option value="either">Either large or small companies</option>
-              <option value="creative">None, I don't want to work.</option>
-              <option value="neither"></option>
+              <option value="creative">A creative company that values my design talent</option>
+              <option value="neither">None, I don't want to work.</option>
             </select>
 
             <div class="form-group">
@@ -68,6 +68,19 @@
                 </label>
               </div>
             </div>
+
+            <label for="jobType">In what way do you want to contribute?</label>
+            <select class="form-control" id="jobType">
+              <option value="apps">I want to develop Android Apps</option>  <!--C#-->
+              <option value="content">I want to build content-heavy websites.</option>
+              <option value="interactive">I want to make interactive web applications.</option>
+              <option value="design">I want to create polished designs.</option>
+              <option value="software">I want to develop internal software.</option>
+              <option value="any">I would be happy to contribute in any way.</option>
+              <option value="none">I do not want to contribute.</option>
+            </select>
+
+
 
 
 
