--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <h3 class="panel-title">Official Sorting Quiz</h3>
         </div>
         <div class="panel-body">
-          <form id="From"><!--start Form-->
+          <form id="epicodusForm"><!--start Form-->
             <div class="form-group">
               <label for="name">First Name:</label>
               <input type="text" name="name" class="firstName form-control">
