add different tracks to results div in html and set them to display none in css

--- a/index.html
+++ b/index.html
@@ -120,9 +120,33 @@
       </div><!-- End Quiz Panel-->
 
 
-      <div id="Results">
-
-      </div>
+      <div id="results">
+        <div class="rubyRails">
+          <p>
+            Ruby/Rails
+          </p>
+        </div>
+        <div class="phpDrupal">
+          <p>
+            PHP/Drupal
+          </p>
+        </div>
+        <div class="javaAndroid">
+          <p>
+            Java/Android
+          </p>
+        </div>
+        <div class="cssDesign">
+          <p>
+            css/Design
+          </p>
+        </div>
+        <div class="cNet">
+          <p>
+            C#/.NET
+          </p>
+        </div>
+      </div><!--end results-->
 
     </div><!--end container-->
   </body>
