add two more result options, any track or no track

--- a/index.html
+++ b/index.html
@@ -146,7 +146,19 @@
             C#/.NET
           </p>
         </div>
+        <div class="none">
+          <p>
+            NONE, don't do any track
+          </p>
+        </div>
+        <div class="any">
+          <p>
+            You could do any track
+          </p>
+        </div>
+
       </div><!--end results-->
+
 
     </div><!--end container-->
   </body>
