--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
             <label for="jobType">In what way do you want to contribute?</label>
             <select class="form-control" id="jobType">
-              <option value="apps">I want to develop Android Apps</option>  <!--C#-->
+              <option value="apps">I want to develop Android Apps</option> 
               <option value="content">I want to build content-heavy websites.</option>
               <option value="interactive">I want to make interactive web applications.</option>
               <option value="design">I want to create polished designs.</option>
