--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
             <label for="jobType">In what way do you want to contribute?</label>
             <select class="form-control" id="jobType">
-              <option value="apps">I want to develop Android Apps</option> 
+              <option value="apps">I want to develop Android Apps</option>
               <option value="content">I want to build content-heavy websites.</option>
               <option value="interactive">I want to make interactive web applications.</option>
               <option value="design">I want to create polished designs.</option>
@@ -122,39 +122,32 @@
 
       <div id="results">
         <div class="rubyRails">
-          <p>
-            Ruby/Rails
-          </p>
+          <h3>Ruby/Rails</h3>
+          <img src="img/rails.png" alt="rails icon" />
         </div>
         <div class="phpDrupal">
-          <p>
-            PHP/Drupal
-          </p>
+          <h3>PHP/Drupal</h3>
+          <img src="img/drupal.png" alt="drupal icon" />
         </div>
         <div class="javaAndroid">
-          <p>
-            Java/Android
-          </p>
+          <h3>Java/Andriod</h3>
+          <img src="img/android.png" alt="android icon" />
         </div>
         <div class="cssDesign">
-          <p>
-            css/Design
-          </p>
+          <h3>css/Design</h3>
+          <img src="img/design.png" alt="design icon" />
         </div>
         <div class="cNet">
-          <p>
-            C#/.NET
-          </p>
+          <h3>C#/.NET</h3>
+          <img src="img/net.png" alt="dot net icon" />
         </div>
         <div class="none">
-          <p>
-            NONE, don't do any track
-          </p>
+          <h3>No class is right for you.</h3>
+          <img>
         </div>
         <div class="any">
-          <p>
-            You could do any track
-          </p>
+          <h3>Any Class would be okay for you</h3>
+          <img>
         </div>
 
       </div><!--end results-->
