--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <div class="col-md-6">
           <div class="panel panel-primary">
             <div class="panel-heading">
-              <h3 class="panel-title">Official Sorting Quiz</h3>
+              <h3 class="panel-title">Sorting Results</h3>
             </div>
             <div class="panel-body">
               <div id="results">
