--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
   </head>
   <body>
     <div class="jumbotron container-fluid">
-      <h1>Epicodus Sorting Hat</h1>
+      <img src="img/logo.png" alt="epicodus logo" />
+      <h1>Track Sorting Hat</h1>
       <h2>You are a code wizard, Harry!</h2>
-      <h4>Take this quiz to be sorted into your Epicodus House.</h4>
+      <h4>Take this quiz to be sorted into your Epicodus track.</h4>
     </div>
     <div class="container"><!--start container-->
       <div class="row">
@@ -41,8 +42,8 @@
                   <option value="neither">None, I don't want to work.</option>
                 </select>
 
-                <div class="form-group radioQ">
-                  <label for="system">
+                <div class="form-group">
+                  <label for="system" class="radioQ">
                   What operating system do you prefer to use?
                   </label>
                   <div class="radio">
@@ -82,8 +83,8 @@
                   <option value="none">I do not want to contribute.</option>
                 </select>
 
-                <div class="form-group radioQ">
-                  <label for="system">
+                <div class="form-group">
+                  <label for="system" class="radioQ">
                   What phrase best describes your experience level?
                   </label>
                   <div class="radio">
@@ -111,7 +112,7 @@
                     </label>
                   </div>
                 </div>
-                <button type="submit" name="button" class="btn btn-warning">Submit</button>
+                <button type="submit" name="button" class="btn btn-warning btn-lg">Submit</button>
 
               </form><!--End Form-->
 
