add jquery to take name input and print it in a letter that accompanies the results

--- a/index.html
+++ b/index.html
@@ -132,30 +132,58 @@
                 <div class="rubyRails">
                   <h3>Ruby/Rails</h3>
                   <img src="img/rails.png" alt="rails icon" />
+                  <h4>Dear <span class="studentName"></span>, </h4>
+                  <p>
+                    We are pleased to inform you that you would be a good fit for our Ruby/Rails track at Epicodus.
+                  </p>
                 </div>
                 <div class="phpDrupal">
                   <h3>PHP/Drupal</h3>
                   <img src="img/drupal.png" alt="drupal icon" />
+                  <h4>Dear <span class="studentName"></span>, </h4>
+                  <p>
+                    We are pleased to inform you that you would be a good fit for our PHP/Drupal track at Epicodus.
+                  </p>
                 </div>
                 <div class="javaAndroid">
                   <h3>Java/Andriod</h3>
                   <img src="img/android.png" alt="android icon" />
+                  <h4>Dear <span class="studentName"></span>, </h4>
+                  <p>
+                    We are pleased to inform you that you would be a good fit for our Java/Android track at Epicodus.
+                  </p>
                 </div>
                 <div class="cssDesign">
                   <h3>css/Design</h3>
                   <img src="img/design.png" alt="design icon" />
+                  <h4>Dear <span class="studentName"></span>, </h4>
+                  <p>
+                    We are pleased to inform you that you would be a good fit for our css/Design track at Epicodus.
+                  </p>
                 </div>
                 <div class="cNet">
                   <h3>C#/.NET</h3>
                   <img src="img/net.png" alt="dot net icon" />
+                  <h4>Dear <span class="studentName"></span>, </h4>
+                  <p>
+                    We are pleased to inform you that you would be a good fit for our C#/.NET track at Epicodus.
+                  </p>
                 </div>
                 <div class="none">
                   <h3>No class is right for you.</h3>
                   <img>
+                  <h4>Dear <span class="studentName"></span>, </h4>
+                  <p>
+                    We regret to inform you that you would not be fit for any track at Epicodus. We recommend you rethink your work ethic and resubmit the quiz once you are excited to work.
+                  </p>
                 </div>
                 <div class="any">
                   <h3>Any Class would be okay for you</h3>
                   <img>
+                  <h4>Dear <span class="studentName"></span>, </h4>
+                  <p>
+                    We are pleased to inform you that you would be a good fit for any of our tracks at Epicodus. Check out our course descriptions to help you make your decision.
+                  </p>
                 </div>
               </div><!--end results-->
             </div><!--End panel body-->
