--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
             </div><!--End panel body-->
             <div class="panel-footer panel-primary">
-              Panel footer
+              <em>Hmm, difficult. VERY difficult. Plenty of courage, I see. Not a bad mind, either. There's talent, oh yes. And a thirst to prove yourself. But where to put you? <br>- Sorting Hat </em>
             </div>
           </div><!-- End Quiz Panel-->
         </div> <!--end column 1-->
@@ -188,7 +188,7 @@
               </div><!--end results-->
             </div><!--End panel body-->
             <div class="panel-footer panel-primary">
-              Panel footer
+              
             </div>
           </div><!-- end panel-->
         </div><!--end column 2-->
