add additional information about each track

--- a/index.html
+++ b/index.html
@@ -135,6 +135,11 @@
                   <h4>Dear <span class="studentName"></span>, </h4>
                   <p>
                     We are pleased to inform you that you would be a good fit for our Ruby/Rails track at Epicodus.
+
+                    Ruby is a dynamic, open source programming language focused on simplicity and productivity. It has an elegant syntax that is natural to read and easy to write. The Ruby programming language is best known as a language for building web applications in its corresponding Ruby on Rails framework. Taking the Ruby course is particularly beneficial due to the general-purpose nature of Ruby makes it suitable for a wide array of programming tasks; much like Pearl, Python, and other languages. Ruby and Rails are typically used by younger companies and startups, especially for building interactive web applications.
+                  </p>
+                  <p>
+                    Rails is a web development framework written in the Ruby language and typically referred to as “Ruby on Rails”. It is meant to make programming applications easier by writing code more efficiently. Rails programming can accomplish much more than many other frameworks and languages because less code needs to be written to complete tasks
                   </p>
                 </div>
                 <div class="phpDrupal">
@@ -144,6 +149,12 @@
                   <p>
                     We are pleased to inform you that you would be a good fit for our PHP/Drupal track at Epicodus.
                   </p>
+                  <p>
+                    PHP is a popular programming language used for web development within the confines of HTML. The PHP language can create dynamic web page content or images used on websites or elsewhere. Students who learn to code in PHP will be able to collect form data, generate dynamic page content, send and receive cookies, and much more.
+                  </p>
+                  <p>
+                    Drupal is content management software (CMS) that is used to create and manage various types of websites. It allows for easy content authoring, strong security, and consistent performance. Drupal modules extend its functionality, while Drupal themes allow for customization of content presentation. Students who learn Drupal will be able to build structured and organized sites quickly and efficiently.
+                  </p>
                 </div>
                 <div class="javaAndroid">
                   <h3>Java/Andriod</h3>
@@ -151,6 +162,12 @@
                   <h4>Dear <span class="studentName"></span>, </h4>
                   <p>
                     We are pleased to inform you that you would be a good fit for our Java/Android track at Epicodus.
+                  </p>
+                  <p>
+                    Java is a programming language used to create dynamic web applications, applets within larger Web pages, and mobile Android applications. Students who learn java programming will be able to create dynamic web applications on their computer. Most Java students also continue into our Android course, where they learn how to create mobile apps for Android devices.
+                  </p>
+                  <p>
+                    Android is a mobile operating system developed by Google, based on The Linux kernel and designed primarily for touchscreen mobile devices such as smartphones and tablets. After launching 2003, Android is the most popular operating system and used for a variety of purposes, including running mobile apps, taking photos, sending messages, etc.
                   </p>
                 </div>
                 <div class="cssDesign">
@@ -160,6 +177,12 @@
                   <p>
                     We are pleased to inform you that you would be a good fit for our css/Design track at Epicodus.
                   </p>
+                  <p>
+                    CSS is the language for describing the presentation of Web pages, including colors, layout, fonts, and other stylistic choices. It allows one to adapt the presentation to different types of devices, such as large screens, small screens, and printers. HTML — used for building the structure of the page — and CSS — used for the visual and aural layout — are the two basic languages involved in the building of web pages and web applications.
+                  </p>
+                  <p>
+                    Web design is a process of conceptualizing, planning, and building a collection of electronic files that determine the layout, colors, text styles, structure, graphics, images, and use of interactive features that deliver pages to your site visitors. Web Design is a crucial component in web development, and students who learn design will be able to engineer positive and interactive user experiences through innovative interfaces.
+                  </p>
                 </div>
                 <div class="cNet">
                   <h3>C#/.NET</h3>
@@ -167,6 +190,14 @@
                   <h4>Dear <span class="studentName"></span>, </h4>
                   <p>
                     We are pleased to inform you that you would be a good fit for our C#/.NET track at Epicodus.
+                  </p>
+                  <p>
+                    The C# (or C-sharp) programming language is one that enables developers to build applications that run on the .NET framework. Students who are well-versed in C# programming can use it to create client applications, database applications, distributed components, and much more.
+
+                    Students who learn C# programming and combine it with their knowledge of the .NET framework can target larger enterprises, government agencies, and companies serving enterprise and government clients for employment.
+                  </p>
+                  <p>
+                    .NET is a software framework developed by Microsoft and primarily used on Microsoft Windows. The .NET framework is used to create desktop, mobile, and web applications that run on various devices. It compiles and executes programs written in the C# and Visual Basic languages. C# and .NET are typically used by large enterprises, government agencies, and companies serving enterprises and government clients.
                   </p>
                 </div>
                 <div class="none">
@@ -188,7 +219,7 @@
               </div><!--end results-->
             </div><!--End panel body-->
             <div class="panel-footer panel-primary">
-              
+
             </div>
           </div><!-- end panel-->
         </div><!--end column 2-->
