add button to learn more info about epicodus

--- a/index.html
+++ b/index.html
@@ -135,7 +135,8 @@
                   <h4>Dear <span class="studentName"></span>, </h4>
                   <p>
                     We are pleased to inform you that you would be a good fit for our Ruby/Rails track at Epicodus.
-
+                  </p>
+                  <p>
                     Ruby is a dynamic, open source programming language focused on simplicity and productivity. It has an elegant syntax that is natural to read and easy to write. The Ruby programming language is best known as a language for building web applications in its corresponding Ruby on Rails framework. Taking the Ruby course is particularly beneficial due to the general-purpose nature of Ruby makes it suitable for a wide array of programming tasks; much like Pearl, Python, and other languages. Ruby and Rails are typically used by younger companies and startups, especially for building interactive web applications.
                   </p>
                   <p>
@@ -215,6 +216,9 @@
                   <p>
                     We are pleased to inform you that you would be a good fit for any of our tracks at Epicodus. Check out our course descriptions to help you make your decision.
                   </p>
+                </div>
+                <div class="moreButton">
+                  <a href="https://www.epicodus.com/"><button type="button" name="button" class="btn btn-lg btn-warning">Learn More about Epicodus</button></a>
                 </div>
               </div><!--end results-->
             </div><!--End panel body-->
